fix body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2134,6 +2134,7 @@ textarea.w-input, textarea.w-select {
   font-family: Ubuntu, Helvetica, sans-serif;
   font-size: 1rem;
   line-height: 1.4;
+  overflow: hidden;
 }
 
 .main-text-block-div {
